--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -2,18 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 
-div {
-    height: 100vh;
-    background-color: rgb(218, 173, 116);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+// div {
+//     height: 100vh;
+//     background-color: rgb(218, 173, 116);
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
    
 
-    h1 {
-        color: rgb(78, 78, 124);
-    }
-}
+//     h1 {
+//         color: rgb(78, 78, 124);
+//     }
+// }
