--- a/src/app.scss
+++ b/src/app.scss
@@ -1,22 +1,56 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-    font-family: 'Courier New', Courier, monospace;
+* {
+  font-family: 'Poppins', sans-serif;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 100vh;
+  background: black;
+}
 
-// div {
-//     height: 100vh;
-//     background-color: rgb(218, 173, 116);
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-   
+body {
+	// background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background: linear-gradient(-45deg,  #000000, #150d24, #051a20, #010f24);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
 
-//     h1 {
-//         color: rgb(78, 78, 124);
-//     }
-// }
+  position: relative;
+}
 
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+.canvasContainer {
+  height: 100vh;
+  width: 100vw;
+  z-index: -1;
+  position: fixed;
+  canvas {
+    // position: absolute;
+  }
+}
+
+.glass {
+  /* from top left, to bottom right */
+  background: linear-gradient(
+    to right bottom,
+    rgba(75, 75, 75, 0.7),
+    rgba(75, 75, 75, 0.3)
+  ) !important;
+  /* the magic words */
+  backdrop-filter: blur(0.2rem) saturate(200%);
+  -webkit-backdrop-filter: blur(0.2rem) saturate(200%);
+}
