--- a/src/app.scss
+++ b/src/app.scss
@@ -2,14 +2,13 @@
 
 * {
   font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   height: 100vh;
-  background: black;
 }
 
 body {
@@ -53,4 +52,16 @@ body {
   /* the magic words */
   backdrop-filter: blur(0.2rem) saturate(200%);
   -webkit-backdrop-filter: blur(0.2rem) saturate(200%);
+}
+
+.glass2 {
+  /* from top left, to bottom right */
+  background: linear-gradient(
+    to right bottom,
+    rgba(100, 100, 125, 0.4),
+    rgba(100, 100, 125, 0.1)
+  ) !important;
+  /* the magic words */
+  backdrop-filter: blur(0.2rem) saturate(100%);
+  -webkit-backdrop-filter: blur(0.2rem) saturate(100%);
 }
