--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,81 +1,86 @@
 .header {
-    background-color: #5429ff98;
-    height: 70px;
-    width: 65%;
-    margin: auto;
-    padding: 18px 40px ;
-    border-radius: 4px;
+  height: 50px;
+  width: 60vw;
+  margin: auto;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  display: flex;
+  align-items: center;
+  color: lightgray;
+  padding: 5px 20px;
 
-    .headerWrapper {
-        display: flex;
+  .headerLogo {
+    flex-grow: 2;
+    font-size: 32px;
+    font-weight: 600;
+  }
+
+  .headerSearch {
+    flex-grow: 2.5;
+    // text-align: center;
+
+    .searchHeaderInput {
+      height: 30px;
+    }
+    .searchHeaderInput[type='text'] {
+      width: 200px;
+      border: none;
+      border-radius: 20px;
+      font-size: 16px;
+      color: lightgray;
+      // background-position: 10px 10px;
+      // background-repeat: no-repeat;
+      padding: 12px 20px 12px 10px;
+      transition: width 0.4s ease-in-out;
+      
+      &:focus {
+        width: 60%;
+        outline: none;
+      }
+
+      &::placeholder {
+        color: gray;
+      }
     }
 
-    .headerLogo {
-        flex-grow: 2;
-        margin-top: 4px;
+  }
+
+  .headerIcons {
+    flex-grow: 2;
+    display: flex;
+    align-items: center;
+
+    .homeIcon {
+      font-size: 25px;
+      color: whitesmoke;
+      // flex-grow: 1;
     }
-    
-    .headerSearch {
-        flex-grow: 2.5;
-        // text-align: center;
-        
-        .searchHeaderInput {
-            height: 30px;
-            margin-bottom: 30px;
-            
-        }
-        .searchHeaderInput[type=text] {
-            width: 200px;
-            box-sizing: border-box;
-            border: 2px solid #ccc;
-            border-radius: 4px;
-            font-size: 16px;
-            background-color: white;
-            // background-image: url('searchicon.png');
-            background-position: 10px 10px; 
-            background-repeat: no-repeat;
-            padding: 12px 20px 12px 10px;
-            transition: width 0.4s ease-in-out;
-          }
-          
-          .searchHeaderInput[type=text]:focus {
-            width: 60%;
-          }
-          
+
+    .messageIcon {
+      font-size: 22px;
+      color: whitesmoke;
+      flex-grow: 1;
     }
-    
-    .headerIcons {
-        flex-grow: 2;
-        margin-top: 4px;
-        display: flex;
 
-        .homeIcon {
-            font-size: 25px;
-            color: aliceblue;
-            // flex-grow: 1;
-        }
-        
-        .messageIcon {
-            margin-top: 2px;
-            font-size: 22px;
-            color: aliceblue;
-            flex-grow: 1;
+    .logOut {
 
-        }
-
-        .logOut {
-            margin-top: 3px;
-
-            flex-grow: 2;
-            text-align: center;
-        }
-
-        .avatarIcon {
-            color: aliceblue;
-            margin-right: 0;
-            flex-grow: 2;
-            font-size: 30px;
-            text-align: end;
-        }
+      flex-grow: 2;
+      text-align: center;
     }
+
+    // .avatarIcon {
+    //   color: whitesmoke;
+    //   // margin-right: 0;
+    //   flex-grow: 2;
+    //   font-size: 30px;
+    //   text-align: end;
+    // }
+
+    .headerUserImage {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  }
 }
