--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -52,13 +52,13 @@
 
     .homeIcon {
       font-size: 25px;
-      color: whitesmoke;
+      color: lightgray;
       // flex-grow: 1;
     }
 
     .messageIcon {
       font-size: 22px;
-      color: whitesmoke;
+      color: lightgray;
       flex-grow: 1;
     }
 
