--- a/src/components/onlineFriends.scss
+++ b/src/components/onlineFriends.scss
@@ -1,47 +1,37 @@
-.onlineFriends{
-    display: flex;
-    justify-content: center;
-    width:90%;
-    // background-color: blanchedalmond; 
-    margin:5%
+.onlineFriends {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  margin-bottom: 20px;
+
+  .onlineFriendsHeader {
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 0;
+  }
+}
+
+.onlineFriend {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
   
-}
-.onlineFriendsWrapper{
-    display: flex;
-    align-items: flex-start; 
-    justify-content: flex-start;
-    flex-direction: column; 
-    margin:5%;
-    padding:10px
-}
-
-.onlineFriend{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    // background-color: rgb(81, 83, 83);
-    // border: 1px solid black;
-    width: 95%;
-    height: 50px;
-    margin-top: 3%;
-
-    
-}
-.profilePic{
-    width:50px;
-    height: 50px;
+  .onlineFriendPic {
+    width: 32px;
+    height: 32px;
     border-radius: 50%;
-}
-.userName{
+    object-fit: cover;
+  }
+  .userName {
     margin-left: 10px;
-}
-
-.greenDot{
+  }
+  
+  .greenDot {
     height: 10px;
-  width: 10px;
-  background-color: rgb(16, 212, 26);
-  border-radius: 50%;
-  display: inline-block;
-  transform: translate(-10px,-15px);
+    width: 10px;
+    background-color: rgb(16, 212, 26);
+    border-radius: 50%;
+    display: inline-block;
+    transform: translate(-10px, -15px);
+  }
 }
