--- a/src/components/sideBar.scss
+++ b/src/components/sideBar.scss
@@ -1,21 +1,11 @@
-
-$light-font-color: #e2dbdf;
-$dark-font-color: #1b1b1b;
-
-.sideBar{
-    color: $light-font-color;
-    display:flex;
-    flex-direction: column;
-    width: 25%;
-    height: 100vh;
-    background-color: rgb(0, 0, 0,.5);
-    border-radius: 3%;
-}
-.sideBarWrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    // justify-content: start;
-    margin:2%
-
+.sideBar {
+  flex: 2.25;
+  border-radius: 20px;
+  color: lightgray;
+  display: flex;
+  flex-direction: column;
+  // justify-content: start;
+  height: max-content;
+  max-height: calc(100vh - 180px);
+  overflow-y: scroll;
 }
