--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,40 +1,50 @@
 .header {
-  height: 50px;
+  height: 70px;
   width: 60vw;
   margin: auto;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   color: lightgray;
   padding: 5px 20px;
 
   .headerLogo {
-    flex-grow: 2;
+    // flex: 1;
     font-size: 32px;
     font-weight: 600;
   }
 
   .headerSearch {
-    flex-grow: 2.5;
+    // flex: 2.5;
     // text-align: center;
-
-    .searchHeaderInput {
-      height: 30px;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    width: fit-content;
+    
+    .headerSearchIcon {
+      color: gray;
+      margin-left: 10px;
     }
-    .searchHeaderInput[type='text'] {
-      width: 200px;
+
+    .headerSearchInput {
+      height: 30px;
+      width: 100px;
       border: none;
       border-radius: 20px;
       font-size: 16px;
       color: lightgray;
+      background: none;
       // background-position: 10px 10px;
       // background-repeat: no-repeat;
       padding: 12px 20px 12px 10px;
-      transition: width 0.4s ease-in-out;
-      
+      transition: 0.4s ease-in-out;
+
       &:focus {
-        width: 60%;
+        transition: 0.4s ease-in-out;
+        width: 200px;
         outline: none;
       }
 
@@ -42,36 +52,35 @@
         color: gray;
       }
     }
-
   }
 
   .headerIcons {
-    flex-grow: 2;
+    // flex: 1;
     display: flex;
     align-items: center;
+    gap: 20px;
 
     .homeIcon {
       font-size: 25px;
       color: lightgray;
-      // flex-grow: 1;
+      // flex: 1;
     }
 
     .messageIcon {
       font-size: 22px;
       color: lightgray;
-      flex-grow: 1;
+      flex: 1;
     }
 
     .logOut {
-
-      flex-grow: 2;
+      flex: 2;
       text-align: center;
     }
 
     // .avatarIcon {
     //   color: whitesmoke;
     //   // margin-right: 0;
-    //   flex-grow: 2;
+    //   flex: 2;
     //   font-size: 30px;
     //   text-align: end;
     // }
