--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -9,11 +9,14 @@
   justify-content: space-between;
   color: lightgray;
   padding: 5px 20px;
+  position: relative;
+  z-index: 5;
 
   .headerLogo {
     // flex: 1;
     font-size: 32px;
     font-weight: 600;
+    cursor: pointer;
   }
 
   .headerSearch {
@@ -54,7 +57,7 @@
     }
   }
 
-  .headerIcons {
+  .headerRight {
     // flex: 1;
     display: flex;
     align-items: center;
@@ -64,32 +67,36 @@
       font-size: 25px;
       color: lightgray;
       // flex: 1;
+      cursor: pointer;
     }
 
     .messageIcon {
       font-size: 22px;
       color: lightgray;
-      flex: 1;
+      // flex: 1;
+      cursor: pointer;
     }
 
     .logOut {
-      flex: 2;
+      // flex: 2;
       text-align: center;
+      cursor: pointer;
     }
-
-    // .avatarIcon {
-    //   color: whitesmoke;
-    //   // margin-right: 0;
-    //   flex: 2;
-    //   font-size: 30px;
-    //   text-align: end;
-    // }
 
     .headerUserImage {
       width: 40px;
       height: 40px;
       border-radius: 50%;
       object-fit: cover;
+      cursor: pointer;
     }
+
+    // .headerDropdown {
+    //   position: absolute;
+    //   width: 100px;
+    //   right: -100px;
+    //   top: 50px;
+    //   z-index: 1000;
+    // }
   }
 }
