--- a/src/app.scss
+++ b/src/app.scss
@@ -71,12 +71,12 @@ body {
   /* from top left, to bottom right */
   background: linear-gradient(
     to right bottom,
-    rgba(100, 100, 125, 0.4),
+    rgba(100, 100, 125, 0.3),
     rgba(100, 100, 125, 0.1)
   ) !important;
   /* the magic words */
-  backdrop-filter: blur(0.1rem) saturate(100%);
-  -webkit-backdrop-filter: blur(0.1rem) saturate(100%);
+  // backdrop-filter: blur(0.01rem) saturate(200%);
+  // -webkit-backdrop-filter: blur(0.01rem) saturate(200%);
 }
 
 .glass3 {
