--- a/src/app.scss
+++ b/src/app.scss
@@ -16,6 +16,8 @@
 * {
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -62,6 +64,7 @@ body {
     rgba(75, 75, 75, 0.7),
     rgba(75, 75, 75, 0.2)
   ) !important;
+  border: 1px solid rgba(255, 255, 255, 0.05);
   /* the magic words */
   backdrop-filter: blur(0.1rem) saturate(200%);
   -webkit-backdrop-filter: blur(0.1rem) saturate(200%);
@@ -74,6 +77,7 @@ body {
     rgba(100, 100, 125, 0.3),
     rgba(100, 100, 125, 0.1)
   ) !important;
+  border: 1px solid rgba(255, 255, 255, 0.05)
   /* the magic words */
   // backdrop-filter: blur(0.01rem) saturate(200%);
   // -webkit-backdrop-filter: blur(0.01rem) saturate(200%);
