--- a/src/components/post.scss
+++ b/src/components/post.scss
@@ -1,58 +1,80 @@
 .postSection {
-    height: 430px;
-    width: 38%;
-    margin: auto;
-    background-color: rgba(243, 174, 174, 0.363);
-    padding: 10px;
-    
+  width: 100%;
+  color: lightgray;
+  padding: 20px;
+  margin-top: 30px;
+  border-radius: 10px;
+  display: flex;
 
-    .postHeader {
-        display: flex;
-        height: 60px;
-        
+  .postUserImg {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
+  }
+  .postHeader {
+    display: flex;
+    align-items: center;
+    // height: 60px;
 
-        .avatarIconPost {
-            font-size: 45px;
-        }
 
-        .postName {
-            font-size: small;
-            margin-top: 8px ;
-            margin-left: 5px;
-        }
+    .postHeaderInfo {
+      display: flex;
+      flex-direction: column;
 
-       
+      & p {
+        margin: 0;
+      }
+
+      .postHeaderUsername {
+        font-weight: 500;
+      }
+      .postHeaderDate {
+        font-size: 12px;
+        font-weight: 300;
+        color: lightgray;
+      }
+    }
+  }
+
+  .postMain {
+    // width: 430px;
+    // height: 323px;
+    // margin: auto;
+    // font-size: small;
+    width: 100%;
+
+    p {
+      font-size: 14px;
+      margin: 15px 0;
     }
 
-    .postMain {
-        width: 430px ;
-        height: 323px;
-        margin: auto;
-        font-size: small;
+    img {
+      // margin-top: 15px;
+      width: 100%;
+      max-height: 500px;
+      object-fit: contain;
+      margin-bottom: 10px;
+    }
+  }
 
-        p {
-            // width: 100%;
-        }
+  .postFooter {
+    // width: 430px;
+    // margin: auto;
+    display: flex;
+    align-items: center;
 
-        img {
-            margin-top: 15px;
-            width: 430px;
-        }
+    p {
+      // margin-top: 7px;
+      // margin-left: 7px;
+      margin-right: 15px;
+      font-size: 11px;
     }
 
-    .postFooter {
-        width: 430px ;
-        margin: auto;
-        display: flex;
-
-        p {
-            margin-top: 7px;
-            margin-left: 7px;
-            margin-right: 10px;
-            font-size: 11px;
-
-        }
+    .postFooterIcon {
+      margin-right: 5px;
+      font-size: 20px;
     }
-
-
+  }
 }
