--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -79,7 +79,11 @@
 
     .logOut {
       // flex: 2;
-      text-align: center;
+      // text-align: center;
+      cursor: pointer;
+    }
+
+    .setTheme {
       cursor: pointer;
     }
 
