theme kaamel be re3aayat Ahmadoov

--- a/src/components/onlineFriends.scss
+++ b/src/components/onlineFriends.scss
@@ -22,10 +22,10 @@
     border-radius: 50%;
     object-fit: cover;
   }
-  .userName {
+  .onlineFriendUsername {
     margin-left: 10px;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 16px;
   }
   
   .greenDot {
