--- a/src/app.scss
+++ b/src/app.scss
@@ -2,13 +2,17 @@
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .glass::-webkit-scrollbar,
-.glass2::-webkit-scrollbar {
+.glass2::-webkit-scrollbar,
+.glassLight::-webkit-scrollbar,
+.glassLight2::-webkit-scrollbar {
   display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .glass,
-.glass2 {
+.glass2,
+.glassLight,
+.glassLight2 {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
@@ -18,6 +22,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  transition: all 0.4s ease-in-out;
 }
 
 body {
@@ -44,7 +49,7 @@ body {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(-45deg, #d3d3d3, #c0b3d8, #a4c7d1, #adbed6);
+  background: linear-gradient(-45deg, #cfb2b2, #a794ca, #92c6d4, #8eabd4);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
@@ -93,7 +98,7 @@ body {
     rgba(100, 100, 125, 0.3),
     rgba(100, 100, 125, 0.1)
   ) !important;
-  border: 1px solid rgba(255, 255, 255, 0.05)
+  border: 1px solid rgba(255, 255, 255, 0.05);
   /* the magic words */
   // backdrop-filter: blur(0.01rem) saturate(200%);
   // -webkit-backdrop-filter: blur(0.01rem) saturate(200%);
@@ -107,7 +112,7 @@ body {
     rgba(150, 150, 150, 0.7),
     rgba(150, 150, 150, 0.2)
   ) !important;
-  border: 1px solid rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.1);
   /* the magic words */
   backdrop-filter: blur(0.1rem) saturate(200%);
   -webkit-backdrop-filter: blur(0.1rem) saturate(200%);
@@ -120,12 +125,21 @@ body {
     rgba(200, 200, 200, 0.3),
     rgba(200, 200, 200, 0.1)
   ) !important;
-  border: 1px solid rgba(255, 255, 255, 0.05)
+  border: 1px solid rgba(255, 255, 255, 0.1);
   /* the magic words */
   // backdrop-filter: blur(0.01rem) saturate(200%);
   // -webkit-backdrop-filter: blur(0.01rem) saturate(200%);
 }
 
 .lightText {
-  color: #000000;
+  color: #000000 !important;
+  color: #1c1c1c !important;
+
+  &::placeholder {
+    color: #505050 !important;
+  }
+
 }
+  .dimmed {
+    color: #505050 !important;
+  }
