--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -77,7 +77,7 @@
       cursor: pointer;
     }
 
-    .logOut {
+    .logout {
       // flex: 2;
       // text-align: center;
       cursor: pointer;
@@ -85,6 +85,16 @@
 
     .setTheme {
       cursor: pointer;
+
+      &::selection {
+        background: none;
+        color: none;
+      }
+
+      &::-moz-selection {
+        background: none;
+        color: none;
+      }
     }
 
     .headerUserImage {
