--- a/src/app.scss
+++ b/src/app.scss
@@ -95,10 +95,11 @@ body {
   /* from top left, to bottom right */
   background: linear-gradient(
     to right bottom,
-    rgba(100, 100, 125, 0.3),
+    rgba(100, 100, 125, 0.5),
     rgba(100, 100, 125, 0.1)
   ) !important;
   border: 1px solid rgba(255, 255, 255, 0.05);
+  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.3);
   /* the magic words */
   // backdrop-filter: blur(0.01rem) saturate(200%);
   // -webkit-backdrop-filter: blur(0.01rem) saturate(200%);
@@ -113,6 +114,7 @@ body {
     rgba(150, 150, 150, 0.2)
   ) !important;
   border: 1px solid rgba(255, 255, 255, 0.1);
+
   /* the magic words */
   backdrop-filter: blur(0.1rem) saturate(200%);
   -webkit-backdrop-filter: blur(0.1rem) saturate(200%);
@@ -122,10 +124,11 @@ body {
   /* from top left, to bottom right */
   background: linear-gradient(
     to right bottom,
-    rgba(200, 200, 200, 0.3),
+    rgba(200, 200, 200, 0.5),
     rgba(200, 200, 200, 0.1)
   ) !important;
   border: 1px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.2);
   /* the magic words */
   // backdrop-filter: blur(0.01rem) saturate(200%);
   // -webkit-backdrop-filter: blur(0.01rem) saturate(200%);
