--- a/src/pages/profile.scss
+++ b/src/pages/profile.scss
@@ -1,7 +1,7 @@
 .profile {
     min-height: 100vh;
     // height: 600px;
-    width: 570px;
+    width: 100%;
     margin: auto;
 
 }
@@ -58,3 +58,35 @@
     width: 500px;
     background-color: lightcoral;
 }
+
+
+.profileContainer {
+        width: 60vw;
+        margin-top: 30px;
+      
+        // display: flex;
+        margin-left: auto;
+        margin-right: auto;
+        gap: 30px;
+      
+}
+
+.heroImage {
+   width: 470px;
+   
+   .coverImage {
+       width: 470px;
+       
+    }
+}
+
+.heroImageAndSideBar{
+    display: flex;
+    justify-content: space-between;
+}
+
+.shareAndPost {
+
+    width: 470px;
+}
+    
