--- a/src/components/share.scss
+++ b/src/components/share.scss
@@ -37,7 +37,21 @@
         border-radius: 50%;
         object-fit: cover;
         cursor: pointer;
-  
+        margin-right: 20px;
+      }
+      .shareInput {
+        background: none;
+        border: none;
+        width: 100%;
+        color: lightgray;
+
+        &:focus {
+          outline: none;
+        }
+
+        &::placeholder {
+          color: rgb(167, 167, 167);
+        }
       }
     }
 
@@ -52,8 +66,16 @@
       }
 
       .shareImageLabel {
+        margin-left: 10px;
         color: lightgray;
-        font-size: 10px;
+        font-size: 12px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+
+        .shareImageIcon {
+          margin-right: 10px;
+        }
       }
 
       .btnPost {
