--- a/src/components/share.scss
+++ b/src/components/share.scss
@@ -61,12 +61,12 @@
       justify-content: space-between;
 
       .shareImageIcon {
-        color: white;
+        color: lightgray;
         cursor: pointer;
       }
 
       .shareImageLabel {
-        margin-left: 10px;
+        margin-left: 53px;
         color: lightgray;
         font-size: 12px;
         display: flex;
