--- a/src/components/feed.scss
+++ b/src/components/feed.scss
@@ -1,9 +1,16 @@
 .feed {
   flex: 6;
   overflow-y: scroll;
-  padding: 30px;
+  padding: 20px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   max-height: calc(100vh - 100px);
   height: calc(100vh - 100px);
+
+  .feedHr {
+    margin-top: 20px;
+    width: calc(100% + 40px);
+    transform: translateX(-20px);
+    border: 1px solid rgba(255, 255, 255, .075);
+  }
 }
