--- a/src/pages/profile.scss
+++ b/src/pages/profile.scss
@@ -1,8 +1,9 @@
 .profile {
-    min-height: 100vh;
+    min-height: 60vh;
     // height: 600px;
     width: 100%;
     margin: auto;
+    border-radius: 35px !important;
 
 }
 
@@ -51,6 +52,7 @@
 .profileDescription {
     font-size: small;
     height: 80px;
+    padding-left: 20px;
 }
 
 .profileShare {
@@ -73,6 +75,8 @@
 
 .heroImage {
    width: 470px;
+   border-radius: 12px;
+   color: white;
    
    .coverImage {
        width: 470px;
@@ -90,3 +94,7 @@
     width: 470px;
 }
     
+.heroImage .coverImage {
+    width: 470px;
+    border-radius: 12px;
+} 
