--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 /* Hide scrollbar for Chrome, Safari and Opera */
+// the asterisk alone is enough
+*::-webkit-scrollbar,
 .glass::-webkit-scrollbar,
 .glass2::-webkit-scrollbar,
 .glassLight::-webkit-scrollbar,
@@ -9,6 +11,7 @@
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
+*,
 .glass,
 .glass2,
 .glassLight,
