--- a/src/components/sideBar.scss
+++ b/src/components/sideBar.scss
@@ -9,4 +9,61 @@
   max-height: calc(100vh - 200px);
   overflow-y: scroll;
   // padding: 20px;
+
+  .sidebarTitle {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 18px;
+    margin-left: 20px;
+    font-weight: 600;
+  }
+
+  .sidebarFriendList {
+    margin: 0 20px;
+  }
+
+  // profile sidebar
+  .sidebarFollowButton {
+    margin: 20px 20px 0 20px;
+    border-radius: 20px;
+    border: none;
+    color: lightgray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0;
+    font-size: 16px;
+  }
+
+  .sidebarNoFriends {
+    margin-left: 20px;
+    // margin-bottom: 20px;
+  }
+
+  .sidebarNoFriendsHome {
+    margin-left: 20px;
+    margin-bottom: 20px;
+  }
+
+  .sidebarFollowing {
+    margin: 20px;
+    margin-top: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+
+    .sidebarFollowingPerson {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: lightgray;
+
+      .sidebarFollowingImg {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+    }
+  }
 }
