--- a/src/app.scss
+++ b/src/app.scss
@@ -52,7 +52,7 @@ body {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(-45deg, #cfb2b2, #a794ca, #92c6d4, #8eabd4);
+  background: linear-gradient(-45deg, #e9e9e9, #a794ca, #92c6d4, #8eabd4);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
@@ -154,4 +154,8 @@ body {
 a {
   text-decoration: none;
   color: lightgray;
+}
+
+path {
+  cursor: pointer;
 }
