--- a/src/components/message.scss
+++ b/src/components/message.scss
@@ -1,50 +1,58 @@
-.chatTop{
-    width:100%;
-    height: 90%;
-    overflow-y: scroll;
-    -ms-overflow-style: none; /* IE and Edge */
+.chatTop {
+  width: 100%;
+  height: 90%;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
-    
-    // border: 1px solid black;
+
+  // border: 1px solid black;
 }
 .chatTop::-webkit-scrollbar {
-    display: none;
+  display: none;
+}
+.messagesContainer {
+  flex: 6;
+  padding: 30px;
+  border-radius: 20px;
+  max-height: calc(100vh - 100px);
+  height: calc(100vh - 120px);
+
+  color: lightgrey;
+}
+.message {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
+  justify-content: space-evenly;
+  // border:1px solid black
+}
+.messageLeft {
+  display: flex;
+  align-items: flex-start;
+  // border:1px solid black ;
+  height: 100%;
+  width: max-content;
+}
+.messageImg {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.messageRight {
+  // border:1px solid black ;
+  height: 100%;
+  width: 90%;
+  .messageContent {
+    border-radius: 10px;
+    padding: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
   }
-.message{
-    width:100%;
-    height: max-content;
-    display: flex;
-    flex-direction: column;
-    // align-items: center;
-    justify-content: space-evenly;
-    // border:1px solid black 
 }
-.messageLeft{
-    display: flex;
-    align-items: flex-start;
-    // border:1px solid black ;
-    height: 100%;
-    width: max-content;
-}
-.messageImg{
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-.messageRight{
-    // border:1px solid black ;
-    height: 100%;
-    width:90%;
-    .messageContent{
-        border-radius: 10px;
-        padding: 10px;
-        margin-left: 10px;
-        margin-bottom: 10px;
-    }
-}
-.own{
-   align-items: flex-end;
-
+.own {
+  align-items: flex-end;
 }
