--- a/src/app.scss
+++ b/src/app.scss
@@ -45,6 +45,7 @@ body {
   background: linear-gradient(-45deg, #000000, #150d24, #051a20, #010f24);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
+  transition: none;
 }
 
 .backgroundLight {
@@ -55,6 +56,7 @@ body {
   background: linear-gradient(-45deg, #e9e9e9, #a794ca, #92c6d4, #8eabd4);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
+  transition: none;
 }
 
 @keyframes gradient {
@@ -75,6 +77,7 @@ body {
   z-index: -1;
   position: absolute;
   canvas {
+    // transition: all 1s ease-in-out;
     // position: absolute;
   }
 }
