--- a/src/pages/signin_signup.scss
+++ b/src/pages/signin_signup.scss
@@ -7,8 +7,9 @@
   color: whitesmoke !important;
 }
 .signInWrapper {
-  width: 80vw;
-  height: 80vh;
+  min-width: 900px;
+  width: 60vw;
+  height: 60vh;
   background-color: rgb(0, 0, 0, 0.5);
   display: flex;
   justify-content: space-evenly;
