--- a/src/pages/signin_signup.scss
+++ b/src/pages/signin_signup.scss
@@ -12,119 +12,98 @@
   height: 60vh;
   background-color: rgb(0, 0, 0, 0.5);
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  flex-direction: row;
-  border-radius: 10px;
+  gap: 30px;
+  border-radius: 20px;
+  padding: 0 30px;
 }
 
 .signInLeft {
-  width: 45%;
+  flex: 1;
   height: 60%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   border-radius: 10px;
+
+  h1 {
+    font-size: 100px;
+    font-weight: 700;
+  }
+
+  p {
+    font-size: 20px;
+  }
 }
 .signInRight {
-  background-color: rgb(200, 206, 206);
   align-items: center;
-  width: 45%;
+  flex: 1;
   height: fit-content;
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
-  border-radius: 10px;
-}
-.form {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-  padding: 5px;
-  p {
+  border-radius: 20px;
+  padding: 20px 0;
+  .form {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+  }
+  .input {
+    padding: 10px 0;
+    width: 90%;
+    border-radius: 10px;
+    padding-left: 10px;
+    margin-bottom: 20px;
+    background: none;
+    color: whitesmoke;
+  
+    &::placeholder {
+      color: rgb(182, 182, 182);
+    }
+  }
+  .input:focus {
+    outline: none;
+  }
+  .button {
+    width: 90%;
+    // height: 13%;
+    padding: 10px 0;
+  
+    border-radius: 10px;
+    color: whitesmoke;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  .newAccountButton {
+    width: 100%;
+    padding: 10px 0;
+    border-radius: 10px;
+    color: whitesmoke;
+    cursor: pointer;
+  }
+  .signupButtonWrapper,
+  .loginButtonWrapper {
+    width: 90%;
+  }
+  .signUpButton {
+    margin-bottom: 15px;
+  }
+  .loginButton {
+    margin-bottom: 10px;
+    &:focus {
+      outline: none;
+    }
+  }
+  .hr {
+    width: 100%;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    margin-bottom: 20px;
+  }
+  .loginOr {
     margin-bottom: 10px;
   }
-}
-.input {
-  padding: 5px 0;
-  width: 90%;
-  // height:13%;
-  border-radius: 10px;
-  padding-left: 10px;
-  margin-bottom: 20px;
-  background: none;
-  color: whitesmoke;
-  &::placeholder {
-    color: whitesmoke;
-  }
-}
-.input:focus {
-  outline: none;
-}
-::placeholder {
-  color: rgb(26, 25, 25);
-  font-size: 1em;
-  margin-left: 10px;
-}
-.button {
-  width: 90%;
-  // height: 13%;
-  padding: 10px 0;
-
-  border-radius: 10px;
-  color: whitesmoke;
-  overflow: hidden;
-  cursor: pointer;
-  transition: 0.2s ease-in-out;
-  &:hover {
-    transform: scale(1.03);
-  }
-  &:focus {
-    transform: scale(0.97);
-  }
-}
-.newAccountButton {
-  width: 50%;
-  padding: 10px 0;
-  border-radius: 10px;
-  color: whitesmoke;
-  transition: 0.2s ease-in-out;
-
-  cursor: pointer;
-  &:hover {
-    transform: scale(1.03);
-  }
-  &:focus {
-    transform: scale(0.97);
-  }
-}
-.signUpButton {
-  margin-bottom: 10px;
-  &:hover {
-    transform: scale(1.03);
-  }
-  &:focus {
-    transform: scale(0.97);
-  }
-}
-.loginButton {
-  margin-bottom: 10px;
-  &:hover {
-    transform: scale(1.03);
-  }
-  &:focus {
-    transform: scale(0.97);
-  }
-}
-.hr {
-  width: 90%;
-  border: 1px solid rgba(255, 255, 255, 0.25);
-  // color: black;
-  // background-color: rgb(253, 5, 5);
-  margin-bottom: 20px;
 }
