--- a/src/components/onlineFriends.scss
+++ b/src/components/onlineFriends.scss
@@ -1,27 +1,36 @@
+.onlineFriendsContainer {
+  padding: 20px;
 
-.onlineFriend {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-  
-  .onlineFriendPic {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    object-fit: cover;
+  .onlineFriendsHeader {
+    font-weight: 600;
+    font-size: 18px;
+    margin-bottom: 0;
   }
-  .onlineFriendUsername {
-    margin-left: 10px;
-    font-weight: 500;
-    font-size: 16px;
-  }
-  
-  .greenDot {
-    height: 10px;
-    width: 10px;
-    background-color: rgb(16, 212, 26);
-    border-radius: 50%;
-    display: inline-block;
-    transform: translate(-10px, -15px);
+  .onlineFriend {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    cursor: pointer;
+
+    .onlineFriendPic {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+    .onlineFriendUsername {
+      margin-left: 5px;
+      font-weight: 500;
+      font-size: 16px;
+    }
+
+    .greenDot {
+      height: 10px;
+      width: 10px;
+      background-color: rgb(16, 212, 26);
+      border-radius: 50%;
+      display: inline-block;
+      transform: translate(-10px, -15px);
+    }
   }
 }
