--- a/src/components/chatSideBar.scss
+++ b/src/components/chatSideBar.scss
@@ -1,13 +1,16 @@
 .chatSideBar {
-    flex: 2.25;
-    border-radius: 20px;
-    color: lightgray;
-    display: flex;
-    flex-direction: column;
-    // justify-content: start;
-    height: max-content;
-    max-height: calc(100vh - 200px);
-    overflow-y: scroll;
-    // padding: 20px;
-  }
-  
+  flex: 2.25;
+  border-radius: 20px;
+  color: lightgray;
+  display: flex;
+  flex-direction: column;
+  // justify-content: start;
+  height: max-content;
+  max-height: calc(100vh - 200px);
+  overflow-y: scroll;
+  // padding: 20px;
+}
+
+.chatSidebarHr {
+  border: 1px solid rgba(255, 255, 255, 0.075);
+}
