--- a/src/components/sideBar.scss
+++ b/src/components/sideBar.scss
@@ -12,7 +12,7 @@
 
   .sidebarTitle {
     margin-top: 20px;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
     font-size: 18px;
     margin-left: 20px;
     font-weight: 600;
@@ -20,6 +20,7 @@
 
   .sidebarFriendList {
     margin: 0 20px;
+    margin-bottom: 20px;
   }
 
   // profile sidebar
@@ -59,6 +60,7 @@
       color: lightgray;
 
       .sidebarFollowingImg {
+        margin-top: 10px;
         width: 50px;
         height: 50px;
         border-radius: 50%;
