--- a/src/components/message.scss
+++ b/src/components/message.scss
@@ -37,12 +37,12 @@
       height: 40px;
       border-radius: 50%;
       object-fit: cover;
-      margin-right: 10px;
+      // margin-right: 10px;
     }
     .messageTextContainer {
       border-radius: 20px;
       padding: 10px 15px 5px 15px;
-      margin-bottom: 20px;
+      margin: 0 10px 20px 10px;
 
       .messageText {
         margin-bottom: 10px;
