--- a/src/pages/chat.scss
+++ b/src/pages/chat.scss
@@ -59,6 +59,14 @@
   align-items: center;
   flex-direction: column;
 
+  .backToChatButton {
+    color: lightgray;
+    margin-bottom: 10px;
+    padding: 0 10px;
+    font-size: 14px;
+    border-radius: 10px;
+  }
+
   * {
     transition: initial;
     font-size: initial;
@@ -66,9 +74,9 @@
   }
 
   .ace_gutter {
-    background: rgba(255, 255, 255, 0.01);
-    backdrop-filter: blur(1rem);
-    -moz-backdrop-filter: blur(1rem);
+    background: rgba(255, 255, 255, 0.2);
+    // backdrop-filter: blur(1rem);
+    // -moz-backdrop-filter: blur(1rem);
   }
 
   .console {
@@ -77,6 +85,7 @@
     margin-top: 20px;
     padding: 20px;
     display: flex;
+    border-radius: 10px;
 
     .consoleLeft {
       
@@ -84,11 +93,13 @@
         padding: 5px 10px;
         margin-right: 10px;
         color: lightgray;
+        border-radius: 20px;
       }
     }
-
+    
     .consoleRight {
       flex: 1;
+      border-radius: 10px;
     }
   }
 }
