--- a/src/pages/chat.scss
+++ b/src/pages/chat.scss
@@ -86,20 +86,33 @@
     padding: 20px;
     display: flex;
     border-radius: 10px;
+    flex: none;
 
     .consoleLeft {
-      
-      .runCodeButton {
+      flex: none;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      .runCodeButton, .resetCodeButton {
         padding: 5px 10px;
         margin-right: 10px;
         color: lightgray;
-        border-radius: 20px;
+        font-size: 12px;
+      }
+      .runCodeButton {
+        border-top-left-radius: 10px;
+      }
+      .resetCodeButton {
+        border-bottom-left-radius: 10px;
+        // border-bottom-right-radius: 10px;
       }
     }
     
     .consoleRight {
       flex: 1;
       border-radius: 10px;
+      border-top-left-radius: 0;
+      overflow: auto;
     }
   }
 }
