--- a/src/components/sideBar.scss
+++ b/src/components/sideBar.scss
@@ -61,6 +61,7 @@
 
       .sidebarFollowingImg {
         margin-top: 10px;
+        margin-bottom: 5px;
         width: 50px;
         height: 50px;
         border-radius: 50%;
