--- a/src/pages/signin_signup.scss
+++ b/src/pages/signin_signup.scss
@@ -9,7 +9,7 @@
 .signInWrapper {
   min-width: 900px;
   width: 60vw;
-  height: 60vh;
+  height: 70vh;
   background-color: rgb(0, 0, 0, 0.5);
   display: flex;
   justify-content: space-between;
@@ -85,6 +85,13 @@
     color: whitesmoke;
     cursor: pointer;
   }
+  .guestAccountButton {
+    width: 90%;
+    padding: 10px 0;
+    border-radius: 10px;
+    color: whitesmoke;
+    cursor: pointer;
+  }
   .signupButtonWrapper,
   .loginButtonWrapper {
     width: 90%;
@@ -106,4 +113,9 @@
   .loginOr {
     margin-bottom: 10px;
   }
+}
+.loginOrMaybe{
+  margin-top: 10px;
+  margin-bottom: 10px;
+
 }
