code editor font

--- a/src/pages/chat.scss
+++ b/src/pages/chat.scss
@@ -70,7 +70,7 @@
   * {
     transition: initial;
     font-size: initial;
-    font-family: 'Monaco';
+    font-family: 'Inconsolata', 'Courier New', Courier, monospace;
   }
 
   .ace_gutter {
